<resources>
    <string name="app_name">Quiz App</string>
    <string name="title">Mythological Quiz!</string>
    <string name="introduction">Think you know your stuff about some of the fantastical histories
        of the ancient eras? Take this quiz and find out!</string>
    <string name="Header1">Question 1</string>
    <string name="Header2">Question 2</string>
    <string name="Header3">Question 3</string>
    <string name="Header4">Question 4</string>
    <string name="Header5">Question 5</string>
    <string name="Header6">Question 6</string>
    <string name="Header7">Question 7</string>
    <string name="Header8">Question 8</string>
    <string name="Question1">In which battle did 300 Spartan warriors stand against 500,000
        Persians?</string>
    <string name="Answer1a">The Battle of Troy</string>
    <string name="Answer1b">The Battle of Thermopylae</string>
    <string name="Answer1c">The Battle of Marathon</string>
    <string name="Answer1d">The Battle of Salamis</string>
    <string name="Question2">Who is the Egyptian deity of the sun?</string>
    <string name="Answer2a">Horus</string>
    <string name="Answer2b">Osiris</string>
    <string name="Answer2c">Ra</string>
    <string name="Answer2d">Isis</string>
    <string name="Question3">Who were among the twelve Olympians in Greek mythology?</string>
    <string name="Answer3a">Poseidon</string>
    <string name="Answer3b">Tyche</string>
    <string name="Answer3c">Hera</string>
    <string name="Answer3d">Iris</string>
    <string name="Question4">What is considered the first Chinese Dynasty?</string>
    <string name="Answer4a">The Shang Dynasty</string>
    <string name="Answer4b">The Qin Dynasty</string>
    <string name="Answer4c">The Chou (Zhou) Dynasty</string>
    <string name="Answer4d">The Xia Dynasty</string>
    <string name="Question5">What is considered the first Chinese Dynasty?</string>
    <string name="Answer5a">The Shang Dynasty</string>
    <string name="Answer5b">The Qin Dynasty</string>
    <string name="Answer5c">The Chou (Zhou) Dynasty</string>
    <string name="Answer5d">The Xia Dynasty</string>
    <string name="Question6">What is a myth defined as?</string>
    <string name="Answer6a">A story that attempts to explain nature, creation and history</string>
    <string name="Answer6b">A true story that passed on from generation to generation</string>
    <string name="Answer6c">A story with monsters and gods</string>
    <string name="Answer6d">Stories of famous people in history and their deeds</string>
    <string name="Question7">Who is the king of the gods (called the All-Father) in Norse
        mythology?</string>
    <string name="Answer7a">Loki</string>
    <string name="Answer7b">Thor</string>
    <string name="Answer7c">Odin</string>
    <string name="Answer7d">Baldr</string>
    <string name="Question8">Who was the most brilliant architect in Greek mythology?</string>
    <string name="Answer8a">Leonardo Da Vinci</string>
    <string name="Answer8b">Diomedes</string>
    <string name="Answer8c">Daedalus</string>
    <string name="Answer8d">Perseus</string>
    <string name="SubmitButton">Submit</string>
    <string name="NotAllAnswered">Not all the questions have been answered - please go back and check your answers</string>
    <string name="ScoreMessage">Your score is:</string>
    <string name="QuestionTotal">/6.0</string>
</resources>
